--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.application.name=SpringWebooDemo1
 # lazy
 spring.main.lazy-initialization=true
+# add logging debug for hr.ja
+
+logging.level.hr.ja=DEBUG
