--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,12 @@
         <java.version>24</java.version>
     </properties>
     <dependencies>
+
+        <dependency>
+            <groupId>com.intellij</groupId>
+            <artifactId>annotations</artifactId>
+            <version>12.0</version>
+        </dependency>
         <dependency>
             <groupId>com.j2html</groupId>
             <artifactId>j2html</artifactId>
