--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>4.0.0</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <version>4.0.1</version>
+        <relativePath/>
     </parent>
     <groupId>hr.ja</groupId>
     <artifactId>SpringWeboo</artifactId>
@@ -25,14 +25,9 @@
             <version>26.0.2-1</version>
         </dependency>
         <dependency>
-            <groupId>com.j2html</groupId>
-            <artifactId>j2html</artifactId>
-            <version>1.6.0</version>
-        </dependency>
-        <dependency>
             <groupId>io.quarkus.qute</groupId>
             <artifactId>qute-core</artifactId>
-            <version>3.30.3</version>
+            <version>3.30.6</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
